fix: Fixes from QA testing
- Fix issue with input box overflowing in iOS
- Fix issue with search button being small and clipping icon
- Fix issue with search list close button being white

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,8 @@
 html {
   height: 100%;
+
+  /* Prevent zooming of text when rotating to landscape. */
+  -webkit-text-size-adjust: 100%; /* iPhone */
 }
 
 body {
@@ -46,6 +49,8 @@ p {
 #header {
   margin: 0 10px;
 
+  /* Prevent iOS Safari from pushing #main to shrink this and cause content to overflow. */
+  -webkit-flex-shrink: 0;
 }
 
 #main {
@@ -56,8 +61,22 @@ p {
   position: relative;
 }
 
+button {
+  background-color: #ddd;
+  border-top: 1px solid #a1a1a1;
+  border-right: 1px solid #a1a1a1;
+  border-bottom: 1px solid #a1a1a1;
+  border-left: 1px solid #a1a1a1;
+  cursor: pointer;
+}
 
 /* Search input */
+
+#search-btn {
+  border-radius: 0 4px 4px 0;
+  padding: 0;
+  width: 40px;
+}
 
 /* Derived from Bootstrap styling */
 input {
@@ -68,7 +87,7 @@ input {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   color: #555;
   display: block;
-  font-size: 0.875rem;
+  font-size: 16px; /* 16px+ to prevent zoom behaviour on iPhone */
   height: 34px;
   line-height: 1.42857143;
   padding: 6px 12px;
@@ -110,10 +129,6 @@ input:focus {
   margin-top: 20px;
 }
 
-.input-addon {
-  width: 40px;
-  padding: 0;
-}
 
 
 
@@ -229,7 +244,7 @@ td.remove-item-cell {
   }
 
   #main {
-    -webkit-flex-basis: 60%; /* Safari 8 */
-    flex-basis: 60%;
+    -webkit-flex-basis: 50%; /* Safari 8 */
+    flex-basis: 50%;
   }
 }
